--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,8 @@
         <keycloak-admin-client.version>25.0.6</keycloak-admin-client.version>
         <jakarta.ws.rs-api.version>3.1.0</jakarta.ws.rs-api.version>
         <springdoc.version>2.6.0</springdoc.version>
+        <spring-boot-maven-plugin.version>3.3.4</spring-boot-maven-plugin.version>
+        <springdoc-openapi-maven-plugin.version>1.4</springdoc-openapi-maven-plugin.version>
         <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
         <loki-logback-appender.version>1.5.1</loki-logback-appender.version>
         <elastic-apm-agent.version>1.51.0</elastic-apm-agent.version>
@@ -62,10 +64,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -208,63 +206,41 @@
                     </excludes>
                 </configuration>
             </plugin>
-            <!-- JMeter Maven Plugin -->
+            <!-- to generate json and yaml OpenAPI swagger description during build time -->
             <plugin>
-                <groupId>com.lazerycode.jmeter</groupId>
-                <artifactId>jmeter-maven-plugin</artifactId>
-                <version>3.8.0</version>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot-maven-plugin.version}</version>
+                <configuration>
+                    <jvmArguments>-Dspring.application.admin.enabled=true</jvmArguments>
+                </configuration>
                 <executions>
                     <execution>
-                        <id>configuration</id>
                         <goals>
-                            <goal>configure</goal>
-                        </goals>
-                    </execution>
-                    <execution>
-                        <id>jmeter-tests</id>
-                        <goals>
-                            <goal>jmeter</goal>
+                            <goal>start</goal>
+                            <goal>stop</goal>
                         </goals>
                     </execution>
                 </executions>
-                <configuration>
-                    <testFilesDirectory>src/test/jmeter</testFilesDirectory>
-                    <resultsFileFormat>xml</resultsFileFormat>
-                    <resultsDirectory>target/jmeter/results</resultsDirectory>
-                    <generateReports>true</generateReports>
-                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springdoc</groupId>
+                <artifactId>springdoc-openapi-maven-plugin</artifactId>
+                <version>${springdoc-openapi-maven-plugin.version}</version>
+                <executions>
+                    <execution>
+                        <id>integration-test</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
 
     <!-- To run jmeter tests: mvn verify -Pjmeter,run-app --> 
     <profiles>
-        <!-- JMeter Test Profile -->
-        
-        <profile>
-            <id>jmeter</id>
-            <build>
-                <plugins>
-                    <!-- Configure JMeter execution for this profile -->
-                    <plugin>
-                        <groupId>com.lazerycode.jmeter</groupId>
-                        <artifactId>jmeter-maven-plugin</artifactId>
-                        <version>3.8.0</version>
-                        <executions>
-                            <execution>
-                                <id>jmeter-tests</id>
-                                <goals>
-                                    <goal>jmeter</goal>
-                                </goals>
-                            </execution>
-                        </executions>
-                        <configuration>
-                            <testFilesDirectory>src/test/jmeter</testFilesDirectory>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
     </profiles>
 
 </project>
