--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ GRAFANA_DATA=./monitoring/grafana/provisioning/datasources
 TEMPO_CONFIG=./monitoring/tempo/tempo.yml
 TEMPO_DATA=./monitoring/tempo/tempo-data
 MINIO_DATA=./docker/minio/data
+POSTGRES_DATA=./docker/postgres/data
 
 SONARQUBE_CONFIG=./monitoring/sonarqube/sonarqube_conf
 SONARQUBE_DATA=./monitoring/sonarqube/sonarqube_data
@@ -23,23 +24,24 @@ MINIO_PORT=7001
 MINIO_CONSOLE_PORT=7002
 KEYCLOAK_PORT=8081
 POSTGRES_PORT=5432
+PGADMIN_PORT=16543
 SONARQUBE_PORT=9000
+REDIS_PORT=6379
 
 #### Secrets ####
 MINIO_ROOT_USER=admin
 MINIO_ROOT_PASSWORD=password
 
-POSTGRES_DB=keycloak
-POSTGRES_USER=keycloak
-POSTGRES_PASSWORD=keycloak
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=password
 
 KEYCLOAK_ADMIN_USER=admin
 KEYCLOAK_ADMIN_PASSWORD=admin
 KEYCLOAK_USER=masum
 KEYCLOAK_PASSWORD=masum
 KEYCLOAK_DB_VENDOR=postgres
-KEYCLOAK_DB_HOST=keycloak-db
-KEYCLOAK_DB_PORT=5432
-KEYCLOAK_DB_NAME=keycloak
-KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_PASSWORD=keycloak
+KEYCLOAK_DB_HOST=postgres
+KEYCLOAK_DB_PORT=5400
+KEYCLOAK_DB_NAME=postgres
+KEYCLOAK_DB_USER=postgres
+KEYCLOAK_DB_PASSWORD=postgres
