--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,17 +5,28 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
-      day: "sunday
-      time: "09:00"
+      day: "saturday"
+      time: "02:19"
       timezone: "Asia/Dhaka"
     open-pull-requests-limit: 8 # Maximum number of open PRs created by Dependabot
+    labels:
+      - "dependencies"
+      - "automated-update"
+    assignees:
+      - "masum-wsd" # your-github-username
   
   # Update GitHub Actions dependencies in workflows
   - package-ecosystem: "github-actions"
     directory: "/.github/workflows"
     schedule:
       interval: "weekly"
-      day: "sunday
+      day: "saturday"
+      time: "02:19"
       timezone: "Asia/Dhaka"
     open-pull-requests-limit: 8
+    labels:
+      - "dependencies"
+      - "automated-update"
+    assignees:
+      - "masum-wsd" # your-github-username
     
