--- a/.github/workflows/performance-testing-with-jmeter.yml
+++ b/.github/workflows/performance-testing-with-jmeter.yml
@@ -3,8 +3,8 @@
 on:
   push:
     branches: ["dev"]
-  pull_request:
-    branches: ["dev"]
+  # pull_request:
+  #   branches: ["dev"]
 
 jobs:
   jmeter-test:
