--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -4,14 +4,14 @@ updates:
   - package-ecosystem: "maven"
     directory: "/" # Location of package manifests
     target-branch: "dev"
+    versioning-strategy: "increase" # Only bump to the next major version
     schedule:
       interval: "weekly"
       day: "saturday"
-      time: "02:39"
+      time: "02:51"
       timezone: "Asia/Dhaka"
     open-pull-requests-limit: 10 # Maximum number of open PRs created by Dependabot
     reviewers:
-      - "fakhruddinwsd"
       - "masum-wsd"
     assignees:
       - "masum-wsd" # your-github-username
@@ -23,11 +23,10 @@ updates:
     schedule:
       interval: "weekly"
       day: "saturday"
-      time: "02:39"
+      time: "02:51"
       timezone: "Asia/Dhaka"
     open-pull-requests-limit: 10
     reviewers:
-      - "fakhruddinwsd"
       - "masum-wsd"
     assignees:
       - "masum-wsd" # your-github-username
