--- a/.github/workflows/dastardly_scan.yml
+++ b/.github/workflows/dastardly_scan.yml
@@ -22,7 +22,7 @@ jobs:
       continue-on-error: true
       uses: PortSwigger/dastardly-github-action@main
       with:
-        target-url: 'http://edgar.wsd.com/docxtohtml/'
+        target-url: 'https://edgar.wsd.com/docxtohtml/'
 
     # Publish Test Report
     - name: Publish Test Report
